--- a/Clase_1.html
+++ b/Clase_1.html
@@ -28,7 +28,17 @@
 <hr>
 
 <br>
+<a href="C:\GIT\1_Clase_Prog\Pagina_Web\paginas\servicios.html">Link pagina servicio</a>
+
 <br>
+<a href="C:\GIT\1_Clase_Prog\Pagina_Web\paginas\contacto.html">link pagina contacto</a>
+
+<a href="" style="text-decoration: none;"><img src="img/Boton_whatsapp.png" width="40px" alt=""></a>
+
+<br>
+
+
+
 
 </body>
 </html>
